# celery-django

./: .env_example  Dockerfile  config.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
coverter/: admin.py  apps.py  models.py  serializers.py  tasks.py
coverter/migrations/: 0001_initial.py  0002_alter_rate_short_name.py
currate/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
